--- a/index.html
+++ b/index.html
@@ -6,38 +6,101 @@
     <title>Alien Wars Website</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-        /* Inline CSS code */
-        /* (Dein CSS ist im nächsten Abschnitt auch ausgelagert, wenn du es separat haben willst) */
+        /* Layout Styles */
+        .container {
+            width: 90%;
+            margin: 0 auto;
+        }
+
+        section {
+            padding: 50px 0;
+        }
+
+        /* About My Work Section */
+        #about-my-work {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        #about-my-work .text {
+            width: 60%;
+        }
+
+        #about-my-work .image {
+            width: 10%;
+        }
+
+        /* About Me Section */
+        #about-me {
+            display: flex;
+            flex-direction: row-reverse;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        #about-me .text {
+            width: 60%;
+        }
+
+        #about-me .image {
+            width: 35%;
+        }
+
+        /* My Services Section */
+        #my-services {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        #my-services .text {
+            width: 60%;
+        }
+
+        #my-services .image {
+            width: 35%;
+        }
+
+        /* Contact Me Section */
+        #contact {
+            font-size: 0.9rem;
+            text-align: center;
+        }
+
+        /* Make video fit the entire introduction section */
+        #introduction .video-container {
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
+
+        #introduction video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     </style>
 </head>
 <body>
-    <!-- Header Section -->
-    <header>
-        <h1>Alien Wars</h1>
-        <nav>
-            <ul>
-                <li><a href="#game-project">Game</a></li>
-                <li><a href="#introduction">Introduction</a></li>
-                <li><a href="#about-my-work">About My Work</a></li>
-                <li><a href="#about-me">About Me</a></li>
-                <li><a href="#my-services">Services</a></li>
-            </ul>
-        </nav>
-    </header>
-
     <!-- Game Project Section -->
     <section id="game-project">
-        <div class="container">
-            <h2>Alien Wars - The Game</h2>
-            <div class="game-info">
-                <img src="Asteroid.png" alt="Alien Wars Game Animation" class="game-image">
-                <div class="game-description">
-                    <p>Alien Wars is an action-packed game where you control a spaceship to defend Earth from alien invaders. This game was coded in Python. The goal is to protect the planet by maintaining a high streak and earning the best score possible. Join the fight now!</p>
-                    <a href="https://drive.google.com/uc?export=download&id=19gpn_r_dLv5mRgC11pW1xqG-x-1gxzwK" class="download-btn" target="_blank">Download Alien Wars</a>
-                </div>
+    <div class="container">
+        <h2>Alien Wars - The Game</h2>
+        <div class="game-info">
+            <img src="Asteroid.png" alt="Alien Wars Game Animation" class="game-image">
+            <div class="game-description">
+                <p class="fade-text">
+                    Alien Wars is an action-packed game where you control a spaceship to defend Earth from alien invaders. This game was coded in Python. The goal is to protect the planet by maintaining a high streak and earning the best score possible. Join the fight now!
+                </p>
+                <a href="https://drive.google.com/uc?export=download&id=19gpn_r_dLv5mRgC11pW1xqG-x-1gxzwK" class="download-btn fade-text" target="_blank">Download Alien Wars</a>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
 
     <!-- Introduction Section -->
     <section id="introduction">
@@ -45,45 +108,48 @@
             <h2>Introduction</h2>
             <p>Learn more about Alien Wars through this video introduction. It covers gameplay mechanics, story, and what makes it unique!</p>
             <div class="video-container">
-                <iframe 
-                    src="https://drive.google.com/file/d/1gDgxKjQJAww5nbsakAAD3IzyvVCIIpqD/preview" 
-                    width="100%" 
-                    height="480" 
-                    allow="autoplay; encrypted-media" 
-                    allowfullscreen>
-                </iframe>
-            </div>
+    <iframe 
+        src="https://drive.google.com/file/d/1gDgxKjQJAww5nbsakAAD3IzyvVCIIpqD/preview" 
+        width="100%" 
+        height="480" 
+        allow="autoplay; encrypted-media" 
+        allowfullscreen>
+    </iframe>
+</div>
+
         </div>
     </section>
 
     <!-- About My Work Section -->
     <section id="about-my-work">
         <div class="container">
-            <div class="text">
+            <div class="text fade-text">
                 <h2>About My Work</h2>
                 <p>Alien Wars is a game coded in Python. The game allows players to maneuver a spaceship as they defend Earth from invaders. It's a project that combines coding skills, game design, and creativity. I developed this game as a fun way to challenge players and develop my programming knowledge.</p>
             </div>
-            <div class="image">
-                <img src="PythonCode.png" alt="About my work image">
+            <div class="image fade-text">
+                <img src="Asteroid.png" alt="About my work image">
             </div>
         </div>
     </section>
 
     <!-- About Me Section -->
-    <section id="about-me" class="container">
-        <div class="text">
-            <h2>About Me</h2>
-            <p>I am passionate about creating amazing web designs and user-friendly applications. My journey began with an interest in coding, and now I specialize in delivering high-quality projects tailored to client needs.</p>
-        </div>
-        <div class="image">
-            <img src="your-image-path.jpg" alt="About Me Image">
+    <section id="about-me">
+        <div class="container">
+            <div class="text fade-text">
+                <h2>About Me</h2>
+                <p>I enjoy coding new things and showcasing them to improve my skills. Recently, I started a YouTube channel with my friends, where we share our projects and adventures. I am passionate about game development, coding, and creating engaging content for others to enjoy.</p>
+            </div>
+            <div class="image fade-text">
+                <img src="about-me-image.jpg" alt="About me image">
+            </div>
         </div>
     </section>
 
     <!-- My Services Section -->
     <section id="my-services">
         <div class="container">
-            <div class="text">
+            <div class="text fade-text">
                 <h2>My Services</h2>
                 <ul>
                     <li>Game Development</li>
@@ -92,15 +158,54 @@
                     <li>Business Strategy</li>
                 </ul>
             </div>
-            <div class="image">
-                <img src="FunnyImage.jpeg" alt="My services image">
+            <div class="image fade-text">
+                <img src="services-image.jpg" alt="My services image">
             </div>
+        </div>
+    </section>
+
+    <!-- Contact Me Section -->
+    <section id="contact">
+        <div class="container">
+            <h2 class="fade-text">Contact Me</h2>
+            <p class="fade-text">If you're interested in my services or want to learn more, feel free to contact me. I am available through email or Discord. If I don’t respond immediately, I might be busy, but I will get back to you as soon as possible!</p>
+            <a href="mailto:youremail@example.com" class="fade-text">Email me</a>
+            <a href="mailto:youremail@example.com" class="fade-text">Discord</a>
         </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>© 2025 Alien Wars. All rights reserved.</p>
+        <div class="container">
+            <p class="fade-text">&copy; 2024 Alien Wars Website by Lazy. All rights reserved.</p>
+        </div>
     </footer>
+
+    <script src="script.js"></script>
+
+    <script>
+        // Create a new Intersection Observer
+        const observer = new IntersectionObserver((entries, observer) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    // Add the 'visible' class to the element when it enters the viewport
+                    entry.target.classList.add('visible');
+                } else {
+                    // Remove the 'visible' class when the element leaves the viewport
+                    entry.target.classList.remove('visible');
+                }
+            });
+        }, {
+            threshold: 0.5 // Trigger when 50% of the element is visible
+        });
+
+        // Select all elements you want to apply the fade effect to
+        const fadeElements = document.querySelectorAll('.fade-text');
+
+        // Observe each fade-in element
+        fadeElements.forEach(element => {
+            observer.observe(element);
+        });
+    </script>
 </body>
 </html>
