--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
     </div>
 </section>
 
+<section id="image-section">
+    <div class="container">
+        <img src="PythonCode.jpeg" alt="Featured Image" style="width:100%; border-radius: 10px;">
+    </div>
+</section>
+
     <!-- About Me Section -->
     <section id="about-me">
         <div class="container">
