--- a/index.html
+++ b/index.html
@@ -128,16 +128,11 @@
             <p>Alien Wars is a game coded in Python. The game allows players to maneuver a spaceship as they defend Earth from invaders. It's a project that combines coding skills, game design, and creativity. I developed this game as a fun way to challenge players and develop my programming knowledge.</p>
         </div>
         <div class="image fade-text">
-            <img src="Asteroid.png" alt="About my work image">
+            <img src="PythonCode.jpeg" alt="About my work image">
         </div>
     </div>
 </section>
 
-<section id="image-section">
-    <div class="container">
-        <img src="PythonCode.jpeg" alt="Featured Image" style="width:100%; border-radius: 10px;">
-    </div>
-</section>
 
     <!-- About Me Section -->
     <section id="about-me">
