--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <p>I enjoy coding new things and showcasing them to improve my skills. Recently, I started a YouTube channel with my friends, where we share our projects and adventures. I am interested in game development, coding and creating good content for others to enjoy.</p>
             </div>
             <div class="image fade-text">
-                <img src="about-me-image.jpg" alt="About me image">
+                <img src="" alt="About me image">
             </div>
         </div>
     </section>
