--- a/index.html
+++ b/index.html
@@ -120,6 +120,39 @@
         </div>
     </section>
 
+    <section id="updates">
+    <div class="container">
+        <div id="latest-update">
+            <h2>Latest Update</h2>
+            <ul>
+                <li>Bug fixes</li>
+                <li>Fixed the issue which caused lag to some players</li>
+                <li>Improved the spaceship control system: you can now fly up and down</li>
+                <li>Other control changes (look in the folder for more information)</li>
+                <li>Game's refresh rate set to 75 to prevent lag and other issues</li>
+                <li>New leaderboard system</li>
+                <li>You can type in a username to pin your score</li>
+                <li>Added coins</li>
+                <li>New explosion effect once an alien got hit</li>
+                <li>Font got changed</li>
+                <li>New pause button</li>
+                <li>New streak text ui</li>
+                <li>minor bug fixes</li>
+            </ul>
+        </div>
+        <div id="last-update">
+            <h2>Last Update</h2>
+            <ul>
+                <li>Bugs Fixes</li>
+                <li>Added movement to the stars in the background</li>
+                <li>Added a boss fight when you reach score 1000</li>
+                <li>Overall better performance</li>
+            </ul>
+        </div>
+    </div>
+</section>
+
+
     <!-- About My Work Section -->
     <section id="about-my-work">
     <div class="container">
