--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 </p>
             </div>
             <div class="image fade-text">
-                <img src="services-image.jpg" alt="My services image">
+                <alt="My services image">
             </div>
         </div>
     </section>
@@ -206,16 +206,16 @@
     <section id="contact">
         <div class="container">
             <h2 class="fade-text">Contact Me</h2>
-            <p class="fade-text">If you're interested in my services or want to learn more, feel free to contact me. I am available through email or Discord. If I don’t respond immediately, I might be busy, but I will get back to you as soon as possible!</p>
-            <a href="openwi65@gmail.com" class="fade-text">Email me</a>
-            <a href="mailto:youremail@example.com" class="fade-text">Discord</a>
+            <p class="">If you're interested in my services or want to learn more, feel free to contact me. I am available through email or Discord. If I don’t respond immediately, I might be busy, but I will get back to you as soon as possible!</p>
+            <a href="openwi65@gmail.com" class="">Email me</a>
+            <a href="mailto:youremail@example.com" class="">Discord</a>
         </div>
     </section>
 
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p class="fade-text">&copy; 2024 Alien Wars Website by Lazy. All rights reserved.</p>
+            <p class="">&copy; 2024 Alien Wars Website by Lazy. All rights reserved.</p>
         </div>
     </footer>
 
