--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <section id="updates">
     <div class="container">
         <div id="latest-update">
-            <h2>Latest Update</h2>
+            <h2>Latest Update V1.2</h2>
             <ul>
                 <li>Bug fixes</li>
                 <li>Fixed the issue which caused lag to some players</li>
@@ -142,7 +142,7 @@
                 <h2>‎ </h2>
             </ul>
         </div>
-        <div id="last-update">
+        <div id="last-update V1.1">
             <h2>Last Update</h2>
             <ul>
                 <li>Bugs Fixes</li>
