--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
     </section>
 
-    <section id="updates">
+   <section id="updates">
     <div class="container">
         <div id="latest-update">
             <h2>Latest Update V1.2</h2>
@@ -136,11 +136,13 @@
                 <li>New explosion effect once an alien got hit</li>
                 <li>Font got changed</li>
                 <li>New pause button</li>
-                <li>New streak text ui</li>
-                <li>minor bug fixes</li>
-                <h2>‎ </h2>
-                <h2>‎ </h2>
+                <li>New streak text UI</li>
+                <li>Minor bug fixes</li>
             </ul>
+        </div>
+        <!-- Add Image Below Latest Update -->
+        <div id="update-image">
+            <img src="update-image.jpg" alt="Latest Update Preview" class="update-image">
         </div>
         <div id="last-update V1.1">
             <h2>Last Update</h2>
