--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </div>
         <!-- Add Image Below Latest Update -->
         <div id="update-image">
-            <img src="update-image.jpg" alt="Latest Update Preview" class="update-image">
+            <img src="LightBulb.jpeg" alt="Latest Update Preview" class="update-image">
         </div>
         <div id="last-update V1.1">
             <h2>Last Update</h2>
