--- a/index.html
+++ b/index.html
@@ -173,18 +173,17 @@
 </section>
 
 
-    <!-- About Me Section -->
     <section id="about-me">
-        <div class="container">
-            <div class="text fade-text">
-                <h2>About Me</h2>
-                <p>I enjoy coding new things and showcasing them to improve my skills. Recently, I started a YouTube channel with my friends, where we share our projects and adventures. I am interested in game development, coding and creating good content for others to enjoy.</p>
-            </div>
-            <div class="image fade-text">
-                <img src="" alt="About me image">
-            </div>
+    <div class="container">
+        <div class="text fade-text">
+            <h2>About Me</h2>
+            <p>I enjoy coding new things and showcasing them to improve my skills. Recently, I started a YouTube channel with my friends, where we share our projects and adventures. I am interested in game development, coding, and creating good content for others to enjoy.</p>
         </div>
-    </section>
+        <div class="image fade-text">
+            <img src="FunnyImage.png" alt="A photo representing the creator">
+        </div>
+    </div>
+</section>
 
     <!-- My Services Section -->
     <section id="my-services">
