--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <p>I enjoy coding new things and showcasing them to improve my skills. Recently, I started a YouTube channel with my friends, where we share our projects and adventures. I am interested in game development, coding, and creating good content for others to enjoy.</p>
         </div>
         <div class="image fade-text">
-            <img src="FunnyImage.png" alt="A photo representing the creator">
+            <img src="FunnyImage.jpeg" alt="A photo representing the creator">
         </div>
     </div>
 </section>
