--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="game-info">
             <img src="Asteroid.png" alt="Alien Wars Game Animation" class="game-image">
             <div class="game-description">
-                <p class="fade-text">
+                <p>
                     Alien Wars is an action-packed game where you control a spaceship to defend Earth from alien invaders. This game was coded in Python. The goal is to protect the planet by maintaining a high streak and earning the best score possible. Join the fight now!
                 </p>
                 <a href="https://drive.google.com/uc?export=download&id=19gpn_r_dLv5mRgC11pW1xqG-x-1gxzwK" class="download-btn fade-text" target="_blank">Download Alien Wars</a>
@@ -206,7 +206,7 @@
     <!-- Contact Me Section -->
     <section id="contact">
         <div class="container">
-            <h2 class="fade-text">Contact Me</h2>
+            <h2>Contact Me</h2>
             <p class="">If you're interested in my services or want to learn more, feel free to contact me. I am available through email or Discord. If I don’t respond immediately, I might be busy, but I will get back to you as soon as possible!</p>
             <a href="openwi65@gmail.com" class="">Email me</a>
             <a href="mailto:youremail@example.com" class="">Discord</a>
