--- a/index.html
+++ b/index.html
@@ -186,6 +186,12 @@
         <div class="image fade-text">
             <img src="FunnyImage.jpeg" alt="A photo representing the creator">
         </div>
+
+        <div class="rotate">G</div>
+        <div class="rotate">U</div>
+        <div class="rotate">N</div>
+        <div class="rotate">S</div>
+
     </div>
 </section>
 
