--- a/index.html
+++ b/index.html
@@ -218,6 +218,28 @@
         </div>
     </section>
 
+
+    <section id="friend">
+    <div class="container">
+        <div class="text fade-text">
+            <h2>Friend's Service</h2>
+            <h2>‎ </h2>
+            <p> I have a friend who uses a special software to edit videos and more. If you are interested in contacting him feel free to do so.</p>
+        </div>
+        <h2>‎ </h2>
+        <h2>‎ </h2>
+        <div class="image fade-text">
+            
+        </div>
+
+        <div class="rotate">G</div>
+        <div class="rotate">U</div>
+        <div class="rotate">N</div>
+        <div class="rotate">S</div>
+
+    </div>
+</section>
+
     <!-- Contact Me Section -->
     <section id="contact">
         <div class="container">
