--- a/index.html
+++ b/index.html
@@ -85,6 +85,21 @@
     </style>
 </head>
 <body>
+
+
+    <nav class="top-menu">
+        <ul>
+            <li><a href="#game-project">Game Project</a></li>
+            <li><a href="#introduction">Introduction</a></li>
+            <li><a href="#updates">Updates</a></li>
+            <li><a href="#about-my-work">About My Work</a></li>
+            <li><a href="#about-me">About Me</a></li>
+            <li><a href="#my-services">My Services</a></li>
+            <li><a href="#friend">Friend's Service</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+    
     <!-- Game Project Section -->
     <section id="game-project">
     <div class="container">
