--- a/index.html
+++ b/index.html
@@ -259,6 +259,30 @@
     </div>
 </section>
 
+    <section id="friend2">
+    <div class="container">
+        <div class="text fade-text">
+            <h2>Second friend's service</h2>
+            <h2>‎ </h2>
+            <p>I have another cool friend who I know personally. If you want to know anything about Guns, Bombs I would highly recommend this dude. He is very dangerous too so stay far from him (Don't touch his hair or you will see what happens) DISCORD: ghost_player_x </p>
+        </div>
+        <h2>‎ </h2>
+        <h2>‎ </h2>
+        <div class="image fade-text">
+            
+        </div>
+
+        <div class="rotate">P</div>
+        <div class="rotate">H</div>
+        <div class="rotate">I</div>
+        <div class="rotate">L</div>
+        <div class="rotate">I</div>
+        <div class="rotate">P</div>
+        <div class="rotate">P</div>
+
+    </div>
+</section>
+
     <!-- Contact Me Section -->
     <section id="contact">
         <div class="container">
