--- a/index.html
+++ b/index.html
@@ -55,12 +55,13 @@ a:hover {
     position: fixed; /* Sticks the menu to a fixed position */
     top: 2px; /* Adjusts the height (reduce value to move it up) */
     right: 20px; /* Keeps it aligned to the top-right corner */
-    background: rgba(255, 255, 255, 0.9); /* Slight background for visibility */
-    padding: 10px 20px; /* Adds some padding */
-    border-radius: 10px; /* Makes edges round for a modern look */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Adds a shadow for depth */
-    z-index: 1000; /* Ensures it appears above other elements */
+    background: rgba(0, 0, 0, 0.7); /* Etwas transparenterer dunklerer Hintergrund */
+    padding: 10px 20px; /* Fügt etwas Padding hinzu */
+    border-radius: 10px; /* Rundet die Ecken für ein modernes Aussehen */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Fügt Schatten für Tiefe hinzu */
+    z-index: 1000; /* Stellt sicher, dass es über anderen Elementen erscheint */
 }
+
 
 .top-menu ul {
     list-style: none;
@@ -276,14 +277,15 @@ nav ul li a.active {
 }
 
 
+/* Updates Section */
 #updates {
-    background-color: #161b22; /* Ändere dies zu einem dunkleren Farbton */
+    background-color: #161b22; /* Dunkler Hintergrund */
     padding: 50px 20px;
     margin-top: 20px;
-    border: 1px solid #30363d; /* Passe die Border-Farbe an */
+    border: 1px solid #30363d; /* Anpassung der Border */
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
-    color: #c9d1d9; /* Stelle sicher, dass der Text hell genug ist */
+    color: #ffffff; /* Weißer Text */
 }
 
 
@@ -301,7 +303,8 @@ nav ul li a.active {
 }
 
 #updates ul li {
-    font-size: 1.2em; /* Larger font for better readability */
+    font-size: 1.2em; /* Größerer Text für bessere Lesbarkeit */
+    color: #ffffff; /* Weißer Text für Listenpunkte */
 }
 
 #update-image {
