--- a/index.html
+++ b/index.html
@@ -291,20 +291,20 @@ nav ul li a.active {
 
 #updates h2 {
     font-size: 2.5em;
-    color: #343a40;
+    color: white; /* Change color to white */
     margin-bottom: 15px;
 }
 
 #updates ul {
     list-style-type: disc;
-    margin-left: 20px; /* Indentation for list items */
+    margin-left: 20px;
     line-height: 1.8;
-    color: #495057; /* Text color */
+    color: #495057;
 }
 
 #updates ul li {
-    font-size: 1.2em; /* Größerer Text für bessere Lesbarkeit */
-    color: #ffffff; /* Weißer Text für Listenpunkte */
+    font-size: 1.2em;
+    color: white; /* Change text color to white for list items */
 }
 
 #update-image {
