--- a/index.html
+++ b/index.html
@@ -87,25 +87,18 @@ a:hover {
 }
 
 
-/* Header */
-header {
-    background: #161b22;
-    color: white;
-    padding: 80px 20px;
+        #header {
+    background-color: #333; /* Dark background */
+    color: white; /* Text color white */
+    padding: 20px;
     text-align: center;
-    position: relative;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
 }
 
-/* Header Title */
-header h1 {
-    font-size: 3.5em;
-    font-family: 'Arial Black', sans-serif;
-    letter-spacing: 1px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4); /* Adds depth */
-    margin-bottom: 20px;
-    text-transform: uppercase;
+#header h1 {
+    font-size: 2.5em;
+    color: white; /* White title */
 }
+
 
 /* Navigation */
 nav {
