--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ body {
 
 /* Sektionen */
 section {
+    margin-top: 40px;
     background-color: #161b22; /* Dunkler Box-Hintergrund */
     border: 1px solid #30363d; /* Dezente GitHub-ähnliche Umrandung */
     border-radius: 10px;
