--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ footer {
 
     <!-- My Services Section -->
     <section id="my-services">
-        <div class="container">
+        <div class="flex-container">
             <div class="text fade-text">
                 <h2>My Services</h2>
                 <h2>‎ </h2>
@@ -502,7 +502,7 @@ footer {
 
 
     <section id="friend">
-    <div class="container">
+    <div class="flex-container">
         <div class="text fade-text">
             <h2>Friend's Service</h2>
             <h2>‎ </h2>
@@ -526,7 +526,7 @@ footer {
 </section>
 
     <section id="friend2">
-    <div class="container">
+    <div class="flex-container">
         <div class="text fade-text">
             <h2>Second friend's service</h2>
             <h2>‎ </h2>
@@ -561,7 +561,7 @@ footer {
 
     <!-- Footer -->
     <footer>
-        <div class="container">
+        <div class="flex-container">
             <p class="">&copy; 2025 Alien Wars Website by Lazy. All rights reserved.</p>
         </div>
     </footer>
