--- a/index.html
+++ b/index.html
@@ -352,6 +352,14 @@ footer {
 </head>
 <body>
 
+    <header id="banner">
+  <div class="container">
+    <h1>Alien Wars</h1>
+    <p>The ultimate space battle experience</p>
+  </div>
+</header>
+
+
 
     <nav class="top-menu">
         <ul>
