--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alien Wars Website</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
     <style>
         /* Basic Reset */
 * {
@@ -289,6 +290,13 @@ nav ul li a.active {
     max-width: 100%; /* Bild passt sich an Containergröße an */
     height: auto; /* Beibehaltung des Seitenverhältnisses */
     object-fit: contain; /* Verhindert Verzerrung des Bildes */
+}
+
+h1 {
+    font-family: 'Orbitron', sans-serif;
+    font-size: 3em; /* Größe anpassen */
+    text-transform: uppercase; /* Alles in Großbuchstaben für mehr Sci-Fi-Stil */
+    letter-spacing: 3px; /* Abstand zwischen den Buchstaben */
 }
 
 
