--- a/index.html
+++ b/index.html
@@ -295,7 +295,6 @@ nav ul li a.active {
 h1 {
     font-family: 'Orbitron', sans-serif;
     font-size: 3em; /* Größe anpassen */
-    text-transform: uppercase; /* Alles in Großbuchstaben für mehr Sci-Fi-Stil */
     letter-spacing: 3px; /* Abstand zwischen den Buchstaben */
 }
 
@@ -362,8 +361,8 @@ footer {
 
     <header id="banner">
   <div class="container">
-    <h1>Alien Wars</h1>
-    <p>The ultimate space battle experience</p>
+    <h1>Alien Wars 2</h1>
+    <p>launching on 2/26/2025</p>
   </div>
 </header>
 
