--- a/index.html
+++ b/index.html
@@ -397,6 +397,31 @@ footer {
     </div>
 </section>
 
+    <section id="alienwars2">
+    <div class="container">
+        <div id="alienwars2">
+            <h2>🚀 Alien Wars 2 – The Next Level of Space Combat! 🌌</h2>
+            <p>
+                Get ready, pilots! The legendary Alien Wars is back—now in full 3D with stunning visuals, buttery-smooth performance, and an adrenaline-pumping experience that runs on almost any device. Battle relentless invaders, dodge fiery asteroids, and embark on an epic space journey like never before!  
+            </p>
+            <p><strong>Here’s everything you need to know:</strong></p>
+            <ul>
+                <li>📅 Check the top for the official release date!</li>
+                <li>🔥 Built with cutting-edge technology for jaw-dropping graphics.</li>
+                <li>✈️ Experience an ultra-realistic flight system designed for intense dogfights.</li>
+                <li>🎁 Special rewards for players who showcase our game online!</li>
+                <li>🛸 Fully immersive 3D gameplay for the ultimate space adventure.</li>
+                <li>🖥️ Available exclusively on PC at launch.</li>
+                <li>📱 Mobile support coming soon after the initial release!</li>
+                <li>💯 100% free-to-play – no paywalls, just pure action.</li>
+                <li>🎮 If we hit 100,000+ players, we’ll work on a PlayStation version—also free!</li>
+            </ul>
+            <p>🔥 Stay hyped—the official trailer is dropping soon! 🔥</p>
+        </div>
+    </div>
+</section>
+
+
 
     <!-- Introduction Section -->
     <section id="introduction">
