--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ footer {
     <header id="banner">
   <div class="container">
     <h1>Alien Wars 2</h1>
-    <p>launching on 2/26/2028 (Philipps Schuld)</p>
+    <p>launching on 2/26/2025</p>
   </div>
 </header>
 
